--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^1.4.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "axios": "^0.21.1",
     "framer-motion": "^4.0.0",
     "next": "^10.0.9",
     "next-pwa": "^5.0.6",
